--- a/my-gatsby-site/package.json
+++ b/my-gatsby-site/package.json
@@ -20,7 +20,7 @@
     "gatsby-plugin-image": "^2.8.0",
     "gatsby-plugin-manifest": "^4.8.0",
     "gatsby-plugin-mdx": "^3.8.0",
-
+    "gatsby-plugin-sharp": "^4.8.0",
     "gatsby-plugin-sitemap": "^5.8.0",
     "gatsby-source-filesystem": "^4.8.0",
     "gatsby-transformer-sharp": "^4.8.0",
