--- a/my-gatsby-site/package.json
+++ b/my-gatsby-site/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "my-gatsby-site",
+  "author": "juliobarbagallo",
   "keywords": [
     "gatsby"
   ],
@@ -14,18 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.8.0",
-    "gatsby-plugin-image": "^2.8.0",
-    "gatsby-plugin-manifest": "^4.8.0",
-    "gatsby-plugin-mdx": "^3.8.0",
-    "gatsby-plugin-sharp": "^4.8.0",
-    "gatsby-plugin-sitemap": "^5.8.0",
-    "gatsby-source-filesystem": "^4.8.0",
-    "gatsby-transformer-sharp": "^4.8.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "sharp": "^0.30.1"
+    "react-dom": "^17.0.1"
   }
 }
