--- a/my-gatsby-site/package.json
+++ b/my-gatsby-site/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-image": "^2.8.0",
     "gatsby-plugin-sharp": "^4.8.0",
     "gatsby-source-filesystem": "^4.8.0",
+    "gatsby-transformer-sharp": "^4.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
