--- a/my-gatsby-site/package.json
+++ b/my-gatsby-site/package.json
@@ -15,12 +15,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^4.8.0",
+    "gatsby": "^4.8.1",
     "gatsby-plugin-image": "^2.8.0",
     "gatsby-plugin-sharp": "^4.8.0",
-    "gatsby-source-filesystem": "^4.8.0",
+    "gatsby-source-filesystem": "^4.8.1",
     "gatsby-transformer-sharp": "^4.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "resolutions": {
+    "gatsby-core-utils": "3.7.0"
   }
 }
