--- a/my-gatsby-site/package.json
+++ b/my-gatsby-site/package.json
@@ -15,8 +15,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.8.1",
     "gatsby-plugin-image": "^2.8.0",
+    "gatsby-plugin-mdx": "^3.8.1",
     "gatsby-plugin-sharp": "^4.8.0",
     "gatsby-source-filesystem": "^4.8.1",
     "gatsby-transformer-sharp": "^4.8.0",
